# Morph

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  FATHOM-LICENSE  NNUE_FORENSIC_AUDIT_REPORT.md  NNUE_PIPELINE_FIX_VERIFICATION.md  NNUE_TRAINING_PIPELINE_AUDIT.md  README.md  SECURITY.md  stdendian.h  tbchess.c  tbconfig.h
.github/workflows/: ci.yml  docker-publish.yml  release.yml
automation/: config.py  logging_setup.py  models_registry.py  notify.py  pipeline_controller.py  state.py
distributed/: .gitignore  requirements.txt
distributed/database/: init_db.py  schema.sql
distributed/server/: app.py  auth.py  config.py  db.py  models.py  run_server.py  validation.py
distributed/tests/: test_local.py
distributed/worker/: client.py  config.py  run_worker.py  selfplay.py  worker.py
docs/: DISTRIBUTED_DATA_GENERATION.md  NNUE_TRAINING.md  NNUE_TRAINING_BULLET.md  SEARCH_ARCHITECTURE.md  SELF_IMPROVEMENT_LOOP.md  TRAINING_SERVER.md  endgame_oracle_feasibility.md  opening_book.md  phaseA_nnue_bullet_audit.md  phaseB_teacher_labeling.md  syzygy_tablebase_enablement.md  syzygy_tablebase_verification.md  transformer_architecture_investigation.md
platform/: .gitignore  requirements.txt
platform/database/: schema_extra.sql
platform/docker/: Dockerfile  docker-compose.yml
platform/docs/: ARCHITECTURE.md  SERVER.md  TRAINING.md  WORKER.md
platform/scripts/: install_linux.sh  install_windows.ps1
platform/server/: accounts.py  anti_cheat.py  app.py  auto_pipeline.py  dashboard_data.py  database.py  platform_config.py  ratelimit.py  run_server.py  schemas.py  system_load.py  test_capacity_alert.py  test_dataset_accumulation.py  test_docker_image_contents.py  test_ensure_cpu_queue.py  test_promotion.py  test_prune.py  test_system_load.py
platform/trainer/: test_train_network.py  train_network.py
platform/worker/: artifacts.py  capabilities.py  data_generation.py  elo_match.py  platform_client.py  platform_config.py  platform_worker.py  requirements.txt  resource_limits.py  run_platform_worker.py  selfplay.py  test_data_generation.py  test_platform_client.py  test_platform_config.py  test_platform_worker.py  test_selfplay_random_move_prob.py  updater.py
src/apps/: main.cpp  match_main.cpp  train_main.cpp  uci_main.cpp
src/book/: opening_book.cpp  opening_book.h
src/core/: bitboard.cpp  bitboard.h  movegen.cpp  movegen.h  perft.cpp  perft.h  position.cpp  position.h  types.h  zobrist.cpp  zobrist.h
src/eval/: evaluate.cpp  evaluate.h  psqt.cpp  psqt.h  score.h
src/io/: book.cpp  book.h  pgn.cpp  pgn.h
src/match/: match.cpp  match.h  stats.cpp  stats.h
src/nnue/: nnue.cpp  nnue.h
src/search/: search.cpp  search.h  tt.cpp  tt.h
src/syzygy/: tablebases.cpp  tablebases.h
src/test/: selftest.cpp  selftest.h
src/train/: dataset.cpp  dataset.h  encoding.cpp  encoding.h  selfplay.cpp  selfplay.h  trainer.cpp  trainer.h
src/uci/: uci.cpp  uci.h
tests/: test_eval.cpp  test_fen.cpp  test_opening_book.cpp  test_perft.cpp  test_pgn.cpp  test_search.cpp
tools/nnue_pipeline/: engine_paths.py  export.py  generate.py  nnue_format.py  real_network_audit.py  regression_match.py  test.py  test_train_dataset_loading.py  test_train_lr_schedule.py  train.py  train_nnue  train_nnue.py  uci_match.py
tools/nnue_training/: bullet_checkpoint_to_nnue.py  reference_nnue.py  smoke_sanity_match.py  train_reference.py  verify_against_engine.py
tools/nnue_training/bullet_trainer/: Cargo.toml
tools/nnue_training/bullet_trainer/src/: main.rs
tools/opening_book/: generate_book.py
training_server/: config.py  experiment.py  pipeline.py
training_server/dataset/: batches.py  import_data.py
training_server/evaluation/: evaluate.py
training_server/training/: gpu.py  train.py
